--- a/css/style.css
+++ b/css/style.css
@@ -1057,8 +1057,13 @@ footer div p {
         margin-top: 0px;
     }
 
+
     fieldset {
         display:flex;
+        -webkit-box-orient: vertical;
+		-webkit-box-direction: normal;
+        -ms-flex-direction: column;
+        flex-direction: column;
         padding: 0;
     }
 
